Add image of potatoes to potato recipe page

--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Quick Air Fryer Potatoes</h1>
+        <img src="../images/airfryerpotatoes.jpg" alt="A photo of some delicious diced potatoes next to three breakfast sausage patties">
     </body>
 </html>
