Add potato recipe HTML

--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -7,5 +7,28 @@
     <body>
         <h1>Quick Air Fryer Potatoes</h1>
         <img src="../images/airfryerpotatoes.jpg" alt="A photo of some delicious diced potatoes next to three breakfast sausage patties">
+        <h2>A recipe for tasty breakfast potatoes that doesn't take forever or make a mess</h2>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Four medium-sized potatoes, preferably red</li>
+            <li>Salt, preferably coarse and kosher</li>
+            <li>Garlic powder</li>
+            <li>Dried, chopped onions</li>
+            <li>Freshly-ground black pepper</li>
+            <li>Your best olive oil</li>
+            <li>Apple cider vinegar</li>
+        </ul>
+        <ol>
+            <li>Slam potatoes onto counter top. Stab four times each with a knife. 
+                Pop in the microwave for 2 minutes, flip after one minute. 
+                You want the potatoes to cook a little bit, but not so much that they fall apart when slicing</li>
+            <li>Slice potatoes into 2 inch quarters, and put into a plastic soup tub you kept from Chinese takeout.</li>
+            <li>Drizzle potatoes in oil, add salt, garlic powder, pepper, chopped onions, and splash of the vinegar. 
+                Add lid and shake. Flip upside-down and twist container to thoroughly coat. 
+                Feel free to add more dried onion to really coat them </li>
+            <li>Pour potatoes into airfryer. May depend on the size of your airfryer, but don't pile the potatoes more than two deep or the potatoes won't cook evenly. 
+                Set to 400 degrees for 15 minutes, or until deep, golden brown.</li>
+            <li>Pour potatoes onto a serving plate, and enjoy with discount sausage patties.</li>    
+        </ol>
     </body>
 </html>
