Add h3 for recipe steps

--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -18,6 +18,7 @@
             <li>Your best olive oil</li>
             <li>Apple cider vinegar</li>
         </ul>
+        <h3>Steps</h3>
         <ol>
             <li>Slam potatoes onto counter top. Stab four times each with a knife. 
                 Pop in the microwave for 2 minutes, flip after one minute. 
