--- a/recipes/israeli-salad.html
+++ b/recipes/israeli-salad.html
@@ -22,7 +22,7 @@
         <ol>
             <li>Wash veggies. Slice tomatoes and cucumbers into equal-size diced chunks. Ratio is up to you, but I prefer 50/50 tomato/cucumber.</li>
             <li>Dice a quarter red onion, or half if you're bold.</li>
-            <li>Drizzle olive oil, salt and season mixture, add parsely if you like. Coat evenly with hands.</li>
+            <li>Drizzle olive oil, salt and season mixture, add parsley if you like. Coat evenly with hands.</li>
             <li>Enjoy, preferably outside on a porch, high up overlooking a sunny, Mediterranean cityscape.</li>  
         </ol>
     </body>
