Add alt text to israeli salad image

--- a/recipes/israeli-salad.html
+++ b/recipes/israeli-salad.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Israeli Salad</h1>
-        <img src="../images/israeli-salad.jpg" alt="">
+        <img src="../images/israeli-salad.jpg" alt="A photo of fresh, Israeli salad, with the addition of carrots">
         <h2>Fresh, clean veggies to offset the potatoes</h2>
         <h3>Ingredients</h3>
         <ul>
