Add links to all recipe pages, within an unordered list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a>
+        <ul>
+            <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
+            <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
+            <li><a href="./recipes/vegan-pancakes.html">Vegan Pancakes</a></li>
+        </ul>
     </body>
 </html>
