--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en>">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Breakfast according to Collin</title>
         <link rel="stylesheet" href="./styles/main.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Breakfast according to Collin</h1>
         <ul>
             <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
             <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
