Play with styles from main.css, link HTML to one sheet.

--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Quick Air Fryer Potatoes</title>
+        <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-        <h1>Quick Air Fryer Potatoes</h1>
+        <h1 class="page-header-text">Quick Air Fryer Potatoes</h1>
         <img src="../images/airfryerpotatoes.jpg" alt="A photo of some delicious diced potatoes next to three breakfast sausage patties">
         <h2>A recipe for tasty breakfast potatoes that doesn't take forever or make a mess</h2>
         <h3>Ingredients</h3>
