--- a/recipes/vegan-pancakes.html
+++ b/recipes/vegan-pancakes.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegan Pancakes</title>
+        <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-        <h1>Vegan Pancakes</h1>
+        <h1 class="page-header-text">Vegan Pancakes</h1>
         <img src="../images/vegan-pancakes.jpg" alt="A photo of some delicious vegan pancakes fried on a cast-iron pan">
         <h2>A recipe for hearty vegan pancakes</h2>
         <h3>Ingredients</h3>
