--- a/recipes/israeli-salad.html
+++ b/recipes/israeli-salad.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Israeli Salad</title>
+        <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-        <h1>Israeli Salad</h1>
+        <h1 class="page-header-text">Israeli Salad</h1>
         <img src="../images/israeli-salad.jpg" alt="A photo of fresh, Israeli salad, with the addition of carrots">
         <h2>Fresh, clean veggies to offset the potatoes</h2>
         <h3>Ingredients</h3>
