Add return to recipes list link to all pages

--- a/recipes/israeli-salad.html
+++ b/recipes/israeli-salad.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1 class="page-header-text">Israeli Salad</h1>
+        <a href="../index.html">Return to recipe list...</a>
         <img src="../images/israeli-salad.jpg" alt="A photo of fresh, Israeli salad, with the addition of carrots">
         <h2>Fresh, clean veggies to offset the potatoes</h2>
         <h3>Ingredients</h3>
