--- a/recipes/vegan-pancakes.html
+++ b/recipes/vegan-pancakes.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1 class="page-header-text">Vegan Pancakes</h1>
+        <a href="../index.html">Return to recipe list...</a>
         <img src="../images/vegan-pancakes.jpg" alt="A photo of some delicious vegan pancakes fried on a cast-iron pan">
         <h2>A recipe for hearty vegan pancakes</h2>
         <h3>Ingredients</h3>
