--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1 class="page-header-text">Quick Air Fryer Potatoes</h1>
+        <a href="../index.html">Return to recipe list...</a>
         <img src="../images/airfryerpotatoes.jpg" alt="A photo of some delicious diced potatoes next to three breakfast sausage patties">
         <h2>A recipe for tasty breakfast potatoes that doesn't take forever or make a mess</h2>
         <h3>Ingredients</h3>
