Add header tag and class to center navigation

--- a/recipes/quick-air-fryer-potatoes.html
+++ b/recipes/quick-air-fryer-potatoes.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-        <h1 class="page-header-text">Quick Air Fryer Potatoes</h1>
-        <a href="../index.html">Return to recipe list...</a>
+        <header class="page-header">
+            <h1 class="page-header-text">Quick Air Fryer Potatoes</h1>
+            <a href="../index.html">Return to recipe list...</a>
+        </header>
         <img src="../images/airfryerpotatoes.jpg" alt="A photo of some delicious diced potatoes next to three breakfast sausage patties">
         <h2>A recipe for tasty breakfast potatoes that doesn't take forever or make a mess</h2>
         <h3>Ingredients</h3>
