--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <link rel="stylesheet" href="./styles/main.css">
     </head>
     <body>
-        <h1 class="page-header-text">Breakfast according to Collin</h1>
-        <nav class="recipe-list">
-            <ul>
-                <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
-                <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
-                <li><a href="./recipes/vegan-pancakes.html">Vegan Pancakes</a></li>
-            </ul>
-        </nav>
+        <header class="page-header">
+            <h1 class="page-header-text">Breakfast according to Collin</h1>
+            <nav class="recipe-list-links">
+                <ul>
+                    <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
+                    <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
+                    <li><a href="./recipes/vegan-pancakes.html">Vegan Pancakes</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
