--- a/recipes/israeli-salad.html
+++ b/recipes/israeli-salad.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-        <h1 class="page-header-text">Israeli Salad</h1>
-        <a href="../index.html">Return to recipe list...</a>
+        <header class="page-header">
+            <h1 class="page-header-text">Israeli Salad</h1>
+            <a href="../index.html">Return to recipe list...</a>
+        </header>
         <img src="../images/israeli-salad.jpg" alt="A photo of fresh, Israeli salad, with the addition of carrots">
         <h2>Fresh, clean veggies to offset the potatoes</h2>
         <h3>Ingredients</h3>
