--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en>">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Breakfast according to Collin</title>
         <link rel="stylesheet" href="./styles/main.css">
     </head>
     <body>
-        <header class="page-header">
-            <h1 class="page-header-text">Breakfast according to Collin</h1>
-            <nav class="recipe-list-links">
+            <h1>Breakfast according to Collin</h1>
+            <nav>
                 <ul>
                     <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
                     <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
                     <li><a href="./recipes/vegan-pancakes.html">Vegan Pancakes</a></li>
                 </ul>
             </nav>
-        </header>
     </body>
 </html>
