Reset CSS file and renamed it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Breakfast according to Collin</title>
-        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="./styles/index.css">
     </head>
     <body>
             <h1>Breakfast according to Collin</h1>
