--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <body>
             <h1>Breakfast according to Collin</h1>
             <nav>
-                <ul>
-                    <li><a href="./recipes/quick-air-fryer-potatoes.html">Quick Airfryer Potatoes</a></li>
-                    <li><a href="./recipes/israeli-salad.html">Israeli Salad</a></li>
-                    <li><a href="./recipes/vegan-pancakes.html">Vegan Pancakes</a></li>
-                </ul>
+                <a href="./recipes/quick-air-fryer-potatoes.html"><img src="images/rounded-food-images/potatoes-photo-rounded.png"></a>
+                <a href="./recipes/israeli-salad.html"><img src="images/rounded-food-images/israeli-salad-photo-rounded.png"></a>
+                <a href="./recipes/vegan-pancakes.html"><img src="images/rounded-food-images/pancake-photo-rounded.png"></a>
             </nav>
     </body>
 </html>
