Add recipe image link divs
Divs will contain image and links, and maintain a consistent sizing for both. Used classes for image link divs to target.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
     <body>
             <h1>Breakfast according to Collin</h1>
             <nav>
-                <a href="./recipes/quick-air-fryer-potatoes.html"><img src="images/rounded-food-images/potatoes-photo-rounded.png"></a>
-                <a href="./recipes/israeli-salad.html"><img src="images/rounded-food-images/israeli-salad-photo-rounded.png"></a>
-                <a href="./recipes/vegan-pancakes.html"><img src="images/rounded-food-images/pancake-photo-rounded.png"></a>
+                <div class="recipe-image-link">
+                    <a href="./recipes/quick-air-fryer-potatoes.html">
+                        <img src="images/rounded-food-images/potatoes-photo-rounded.png">
+                    </a>
+                </div>
+                <div class="recipe-image-link">
+                    <a href="./recipes/israeli-salad.html">
+                        <img src="images/rounded-food-images/israeli-salad-photo-rounded.png">
+                    </a>
+                </div>
+                <div class="recipe-image-link">
+                    <a href="./recipes/vegan-pancakes.html">
+                        <img src="images/vegan-pancakes-square.png">
+                    </a>
+                </div>
             </nav>
     </body>
 </html>
