--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <h1>Breakfast according to Collin</h1>
             <nav>
                 <div class="recipe-image-link">
-                    <a href="./recipes/quick-air-fryer-potatoes.html">
-                        <img src="images/rounded-food-images/potatoes-photo-rounded.png">
-                    </a>
+                    <img src="images/rounded-food-images/potatoes-photo-rounded.png" usemap="#recipeimagemap">
+                    <map name="recipeimagemap">
+                        <area shape="circle" coords="300,300,300" alt="Return to home" href="./recipes/quick-air-fryer-potatoes.html">
+                    </map>
                 </div>
                 <div class="recipe-image-link">
                     <a href="./recipes/israeli-salad.html">
