Add title text styling and fonts

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <title>Breakfast according to Collin</title>
         <link rel="stylesheet" href="./styles/reset.css">
         <link rel="stylesheet" href="./styles/index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap" rel="stylesheet">
     </head>
     <body>
-            <h1>Breakfast according to Collin</h1>
+            <h1 class="site-title-text">Breakfast according to Collin</h1>
             <nav>
                 <div class="recipe-image-link">
                     <img src="images/rounded-food-images/potatoes-photo-rounded.png" usemap="#recipeimagemap">
